release: UltiTools-API v6.2.0
Squash merge of alpha branch into main for UltiTools-API v6.2.0 release.

Major features:
- Plugin instance injection via @Autowired
- Config validation annotations (@Range, @NotEmpty, @Size, @Pattern)
- Fluent Query DSL (dataOperator.query().where("name").eq("test").list())
- @Scheduled task system with automatic lifecycle management
- @ConditionalOnConfig for conditional bean registration
- Transaction support with JDBC batch insertAll/updateAll
- JSON snapshot transactions for rollback safety

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>